@@ -1,10 +1,8 @@
 package busim.kkilogbu.record.service;
 
 import busim.kkilogbu.addressInfo.entity.AddressInfo;
-import busim.kkilogbu.api.touristAPI.domain.dto.TouristGridResponse;
+import busim.kkilogbu.api.externalTouristAPI.service.ExternalTouristService;
 import busim.kkilogbu.api.touristAPI.domain.dto.TouristIdImageResponse;
-import busim.kkilogbu.api.touristAPI.domain.dto.TouristMapper;
-import busim.kkilogbu.api.touristAPI.domain.entity.Tourist;
 import busim.kkilogbu.api.touristAPI.repository.TouristRepository;
 import busim.kkilogbu.contents.entity.Contents;
 import busim.kkilogbu.global.Ex.BaseException;
@@ -25,7 +23,6 @@ import busim.kkilogbu.record.dto.RecordMapper;
 import busim.kkilogbu.record.dto.UpdateRecordRequest;
 import busim.kkilogbu.record.entity.Records;
 import busim.kkilogbu.record.repository.RecordRepository;
-import busim.kkilogbu.security.service.CustomUserDetailsService;
 import busim.kkilogbu.user.entity.users.Users;
 import busim.kkilogbu.user.service.BlackListService;
 import busim.kkilogbu.user.service.UserService;
@@ -33,6 +30,7 @@ import lombok.RequiredArgsConstructor;
 
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -43,32 +41,37 @@ public class RecordService {
 	private final AddressInfoRepository addressInfoRepository;
 	private final RedisService redisService;
 	private final BlackListService blackListService;
-	private final TouristRepository touristRepository;
+	private final ExternalTouristService externalTouristService;
 	private final UserService userService;
 
 
 	@Transactional(readOnly = true)
-	public List<TouristIdImageResponse> getTouristGrid(String query, int offset, int limit) {
+	public List<TouristIdImageResponse> getTouristGrid(int offset, int limit) {
 		int page = offset / limit;  // offset을 페이지 번호로 변환
 
 		Pageable pageable = PageRequest.of(page, limit); // 페이지와 사이즈 설정
-		Page<Tourist> tourists = touristRepository.findByMultipleFields(query, pageable);
-
+		// Page<Tourist> tourists = touristRepository.findByMultipleFields(query, pageable);
+		Page<Records> records = recordRepository.findAll(pageable);
+		List<TouristIdImageResponse> externalRecord = externalTouristService.fetchTourInfoDate();
 		// Tourist 객체에서 id와 imageUrl만 추출하여 TouristIdImageResponse로 변환
-		return tourists.stream()
-				.map(tourist -> new TouristIdImageResponse(tourist.getId(), tourist.getImageUrl()))  // id와 imageUrl 추출
-				.collect(Collectors.toList());
+		List<TouristIdImageResponse> recordDto = records.stream()
+			.map(tourist -> new TouristIdImageResponse(tourist.getId(),
+				tourist.getContents().getImageUrl()))  // id와 imageUrl 추출
+			.toList();
+		recordDto.forEach(System.out::println);
+		return Stream.concat(recordDto.stream(), externalRecord.stream())
+			.collect(Collectors.toList());
 	}
 
 
-	@Transactional(readOnly = true)
-	public TouristGridResponse getTouristDetail(Long touristId) {
-		// touristId로 관광지 조회
-		Tourist tourist = touristRepository.findById(touristId)
-				.orElseThrow(() -> new BaseException("관광지를 찾을 수 없습니다.", HttpStatus.NOT_FOUND));
 
+
+	@Transactional(readOnly = true)
+	public RecordDetailResponse getTouristDetail(Long id) {
+		Records records = recordRepository.findById(id)
+				.orElseThrow(() -> new BaseException("관광지에 대한 기록을 찾을 수 없습니다.", HttpStatus.NOT_FOUND));
 		// Tourist 엔티티를 TouristGridResponse로 변환하여 반환
-		return TouristMapper.toGridResponse(tourist);
+		return RecordMapper.toCreateRecordDetailResponse(records);
 	}
 
 	@Transactional(readOnly = true)
@@ -171,13 +174,4 @@ public class RecordService {
 		}
 		recordRepository.delete(records);
 	}
-
-//	private RecordMarkResponse createRecordMarkResponse(Records records) {
-//		return RecordMarkResponse.builder()
-//			.id(records.getId())
-//			.lat(records.getAddressInfo().getLatitude())
-//			.lng(records.getAddressInfo().getLongitude())
-//			.imageUrl(records.getContents().getImageUrl())
-//			.build();
-//	}
 }
